# pseudo_sql

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.txt
include/: column.h  create.h  db.h  delete.h  expression.h  insert.h  operations.h  parser.h  print.h  select.h  syexception.h  table.h  token.h  update.h  value.h
include/command/: create.h  delete.h  insert.h  select.h  update.h
include/data/: column.h  row.h  serializer.h  table.h  value.h
src/: CMakeLists.txt  column.cpp  create.cpp  db.cpp  delete.cpp  expression.cpp  insert.cpp  operations.cpp  parser.cpp  prior_oper.cpp  select.cpp  serializer.cpp  table.cpp  token.cpp  update.cpp
src/command/: create.cpp  delete.cpp  insert.cpp  select.cpp  update.cpp
src/data/: column.cpp  serializer.cpp  table.cpp
tests/: CMakeLists.txt
tests/cases/: create_test.cpp  delete_test.cpp  insert_test.cpp  select_test.cpp  update_test.cpp
